fix spacing

--- a/main.css
+++ b/main.css
@@ -151,19 +151,6 @@ input.resetButton {
   color: white;
 }
 
-
-/* ICONS HOW IT WORKS 
-
-.dinnerware {
-  display: inline;
-}
-
-.videoplayer {
-  display: block;
-}
-*/
-
-
 /* FILTER STYLES */
 
 div.col1 {
@@ -247,114 +234,105 @@ ul {
   padding: 0;
 }
 
-
-/* come back to thissss...... 
-
-.video-results img {
-  margin-left: auto;
-  margin-right: auto;
-}*/
-
-
 /* MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES */
 
 @media (min-width: 600px) {
   .mySlides {
-      max-height: 510px;
+    max-height: 510px;
   }
   .heroSlideContainer {
-      max-height: 510px;
+    max-height: 510px;
   }
   .heroTitle {
-      font-size: 28px;
+    font-size: 28px;
   }
   div.col1 {
-      width: 50%;
-      float: left;
+    width: 50%;
+    float: left;
   }
   div.col2 {
-      margin-left: 50%;
+    margin-left: 50%;
   }
   div.whereToEat {
-      width: 50%;
+    width: 50%;
   }
   .video-results {
-      margin: 50px;
+    margin: 50px;
   }
   .video-results li img {
-      padding-left: 30%;
+    padding-left: 30%;
   }
 }
 
 @media (min-width: 800px) {
   .mySlides {
-      max-height: 800px;
+    max-height: 800px;
   }
   .heroSlideContainer {
-      max-height: 800px;
+    max-height: 800px;
   }
   .heroTitle {
-      font-size: 52px;
+    font-size: 52px;
   }
   .heroTitle.p {
-      font-size: 11px;
-      text-align: center;
+    font-size: 11px;
+    text-align: center;
   }
   h2 {
-      font-size: 38px;
-      padding-bottom: 50px;
+    font-size: 38px;
+    padding-bottom: 50px;
   }
   h3 {
-      font-size: 32px;
-      width: 50%;
+    font-size: 32px;
+    width: 50%;
   }
   p {
-      font-size: 28px;
-      color: rgb(36, 177, 146);
-      padding-top: 50px;
+    font-size: 28px;
+    color: rgb(36, 177, 146);
+    padding-top: 50px;
   }
   .offset {
-      padding-bottom: 50px;
+    padding-bottom: 50px;
   }
   section.cuisineSelection {
-      height: 300px;
+    height: 300px;
   }
   section.location {
-      margin-bottom: 10px;
+    margin-bottom: 10px;
   }
   div.col1 {
-      width: 100%;
-      display: flex;
-      justify-content: flex-start;
-      height: 60px;
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    height: 60px;
   }
   div.col2 {
-      width: 100%;
-      display: flex;
-      justify-content: flex-end;
-      height: 60px;
-      margin: 0 auto;
-      padding: 5px;
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    height: 60px;
+    margin: 0 auto;
+    padding: 5px;
   }
   div.cuisineOptions {
-      width: 60%;
+    width: 60%;
   }
   div.whereToEat {
-      width: 30%;
+    width: 30%;
   }
   div.cuisineOptions {
-      margin: auto 10px;
+    margin: auto 10px;
   }
   .submit:hover {
-      text-decoration: underline;
-      background-color: rgb(36, 177, 146);
-      border: 2px solid white;
-      color: white;
+    text-decoration: underline;
+    background-color: rgb(36, 177, 146);
+    border: 2px solid white;
+    color: white;
   }
   .video-results {
-      margin: 50px;
+    margin: 50px;
   }
   .video-results li img {
-      padding-left: 35%;
+    padding-left: 35%;
   }
 }
